--- a/Console/index.html
+++ b/Console/index.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js" defer></script>
+    <script src="console.js" defer></script>
     <title>Fundamentos de Js</title>
 </head>
 <body>
-    <h1>Aprendendo os fundamentos do Js</h1>
-
-
-    
+    <h1>Console do JavaScript</h1>
 </body>
 </html>
