--- a/Classes/index.html
+++ b/Classes/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos do JavaScript</title>
-    <script src="metodosArray.js" defer></script>
+    <script src="classes.js"></script>
 </head>
 <body>
-    <h1>Métodos de Array</h1>
+    <h1>Classes no JavaScript</h1>
 </body>
 </html>
