--- a/Estruturas de Repetição/index.html
+++ b/Estruturas de Repetição/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos do JavaScript</title>
-    <script src="estruturasRepeticao.js"></script>
+    <script src="estruturasRepeticao.js" defer></script>
 </head>
 <body>
     <h1>Estruturas de Repetição</h1>
